# FLAIR

./: .gitattributes  .gitignore  FLAIR_4CORE_HANDOFF.md  README.md  package_flair_4core.sh
npu/: ACCURACY_HANDOFF.md  CMakeLists.txt  Makefile  Makefile.batch  Makefile.decoder  Makefile.encoder  Makefile.probe  batch_infer.cpp  compare_anomaly_score.py  diag_4core_timing.py  diag_decoder_timing.py  diag_disasm_compare.sh  diag_ir_compare.sh  diag_ir_compare2.sh  diag_symbol_size.sh  gen_decoder_data.py  gen_encoder_data.py  gen_test_data.py  gru_cell_encoder.py  gru_decoder.py  gru_decoder_4core.py  gru_decoder_final.py  gru_decoder_fused.py  gru_decoder_fused_4core.py  gru_decoder_matvec_only.py  gru_decoder_noop.py  gru_encoder.py  gru_encoder_4core.py  notes.py  run_dataset_inference.py  run_full_model_simple.py  run_live_demo.py  scalar_probe.py  system_sweep_results.txt  test.cpp  test_decoder.cpp  verify_decoder_gru_cell_math.py  verify_gru_cell_math.py
npu/kernels/: gru_cell.cc  gru_common.h  gru_decoder.cc  gru_encoder.cc  scalar_probe.cc
scripts/: benchmark_inference.py  benchmark_npu_compare.py  eval_thesis_style.py  preprocess_data.py  retrain_eval_model.py
src/models/: decoder.py  encoder.py  flair_model.py
src/training/: evaluate_flair.py  train_flair.py
